<resources>
    <string name="app_name">Contacts</string>
    <string name="nameOrField">Name field or number field can not be empty</string>
    <string name="addedContact">You have added your contact.</string>
    <string name="givePermission">Please Give Permission for importing contacts</string>
    <string name="contactDeleted">Contact is deleted.</string>
    <string name="enterNamePhoneNumber">Please enter name and phone number</string>
    <string name="contactUpdated">Contact updated successfully</string>
    <string name="emailAreaCannot">Email area can not be empty</string>
    <string name="passwordIsSent">Password is sent to your email</string>
    <string name="somethingWentWrong">Something went wrong. Please try again.</string>
    <string name="emailCannotBeEmpty">Email can not be empty</string>
    <string name="passwordCannotBeEmpty">Password can not be empty</string>
    <string name="logging">Logging your account</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="pleaseCheckPassword">Please Check Your Password</string>
    <string name="sure">Are You Sure?</string>
    <string name="uploadContacts">You will upload your all contacts to application. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="contactsUploaded">Your contacts are uploaded.</string>
    <string name="no">No</string>
    <string name="contactsAreNot">Your contacts are not uploaded.</string>
    <string name="required">Permission Required</string>
    <string name="givePermiss">Give Permission</string>
    <string name="uploading">Uploading...</string>
    <string name="permission">Permission Required</string>
    <string name="give">Give Permission</string>
    <string name="sureAre">Are you sure?</string>
    <string name="contactWillBe">Your all contacts will be deleted. Are you sure?</string>
    <string name="yess">Yes</string>
    <string name="yourAllContacts">Your all contacts are deleted.</string>
    <string name="noo">No</string>
    <string name="deletingProcess">Deleting process is cancelled</string>
    <string name="AreSure">Are you sure?</string>
    <string name="LogOutt">Do you want to log out?</string>
    <string name="yesss">Yes</string>
    <string name="Nooo">No</string>
    <string name="loggingProcess">Logging out process is cancelled</string>
    <string name="PleaseWait">Please wait contacts are uploading...</string>
    <string name="PleaseGivePermission">Please Give Permission for importing contacts</string>
    <string name="cannotBeEmpty">Email can not be empty</string>
    <string name="cannotBeEmppty">Password can not be empty</string>
    <string name="newAccountIs">New Account is Creating</string>
    <string name="PleaseWaitt">Please Wait</string>
    <string name="AccountCreatedSucces">Account Created Successfully</string>
    <string name="save_contact">Save Contact</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="send_verification_mail">Send Verification Mail</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LogIn</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start">SignUp to start</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_contact">EdIt Contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number_here">Phone Number Here</string>
    <string name="contacts">Contacts</string>
    <string name="duplicated">Duplicated</string>
    <string name="settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="importt">You can add contacts manually or you can import your contacts from settings</string>
    <string name="importToApp">Import My Phone Book Contacts to App</string>
    <string name="exportToPhoneBook">Export My All Contacts to Phone Book</string>
    <string name="deleteDuplicated">Delete All Duplicated Names</string>
    <string name="DeleteContactFromApp">Delete My All Contacts From App</string>
    <string name="logOut">Log out</string>
    <string name="ContactAreUploading">Contacts are uploading. Please wait.</string>
    <string name="duplicatedDelete">Your all duplicated contacts will be deleted. Are you sure?</string>
    <string name="duplicatedDeleted">Your duplicated contacts are deleted</string>
    <string name="there_is_no_duplicated_contact">There is no duplicated contact</string>
    <string name="exportContacts">You are going to upload your app contacts to your phone book. Are you sure?</string>
    <string name="contactsDeleting">Contacts are deleting. Please wait.</string>
    <string name="Deleting">Deleting...</string>
</resources>