<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="20dp"
    android:onClick="hideKeyboard"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:transitionName="logo_image"
        android:src="@drawable/phoneblack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:transitionName="logo_name"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:fontFamily="@font/bungee"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_to_start"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="40"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="8dp"
            android:transitionName="logo_username"
            android:hint="@string/e_mail_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterMaxLength="25"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:transitionName="logo_password"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:transitionName="logo_login"
        android:onClick="Sign"
        android:id="@+id/signupButton"
        android:background="#000"
        android:textColor="#fff"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="haveAccount"
        android:id="@+id/haveAccount"
        android:text="@string/already_have_an_account_login"
        android:transitionName="logo_newuser"
        android:background="#00000000"/>

</LinearLayout>