<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:transitionName="logo_image"
        android:src="@drawable/phoneblack" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_back"
        android:textColor="#000"
        android:textSize="25sp"
        android:transitionName="logo_name" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:transitionName="logo_desc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/username"
            android:transitionName="logo_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            android:id="@+id/password"
            android:transitionName="logo_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgetpassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:elevation="0dp"
            android:onClick="forgetPassword"
            android:text="@string/forget_password"
            android:transitionName="logo_forget_password" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/login"
            android:onClick="login"
            android:textColor="#fff"
            android:transitionName="logo_login" />

        <Button
            android:id="@+id/newuser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:onClick="SignUp"
            android:text="@string/new_user_sign_up"
            android:textColor="#000"
            android:textStyle="bold"
            android:transitionName="logo_newuser" />


    </LinearLayout>

</LinearLayout>