<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundfragment"
    android:gravity="center"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_marginTop="-30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232323"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/person"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/contact_name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="-10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

       </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_phone_id"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textSize="24sp"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/dialog_btn_call"
            android:padding="20dp"
            android:textAlignment="textStart"
            android:drawablePadding="20dp"
            android:onClick="updateData"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/save_contact"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/dialog_btn_message"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:onClick="deleteContact"
            android:drawableLeft="@drawable/ic_baseline_delete_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/delete_contact"/>

    </LinearLayout>




</LinearLayout>